feat: search users by username prefix
